--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,12 @@
 @charset 'UTF-8';
 
 /* here for the mouse hover effect */
-
+/* The setting for image and imgtext for the align and autozoom */
 img { border:none; }
 .tips { width:100%; height:auto; margin:0 auto; position:relative; }
-.text { width:100%; height:auto; background:#000; FILTER:alpha(opacity=60); opacity:0.7; -moz-opacity:0.7; position:absolute; left:0; bottom:0; }
-.imgtext { width:100%; height:auto; float:left; padding:20px 10px; color:#FFF; font-size:14px; line-height:200%; }
+.tips img {width:100%; height:100%}
+.text { width:100%; height:auto; background:#000; FILTER:alpha(opacity=60); opacity:0.7; -moz-opacity:0.7; position:absolute; left:0; bottom:11px;}
+.imgtext { font-family:arial;width:100%; height:100%; float:left; padding:20px 10px; color:#FFF; font-size:14px; line-height:200%; }
 
 a{text-decoration: none;}
 
@@ -38,11 +39,6 @@ a{text-decoration: none;}
 		box-sizing: border-box;
 	}
 	
-	.tips img{
-		width:100%; 
-		height:100%;
-	}
-
 	body
 	{
 		/*
@@ -91,7 +87,8 @@ a{text-decoration: none;}
 	
 	body, input, textarea
 	{
-		font-family: 'Source Sans Pro', sans-serif;
+		/*font-family: 'Source Sans Pro', sans-serif;*/
+		font-family: calibri, sans-serif;
 		font-weight: 300;
 		color: #777;
 	}
